--- a/main.ipynb
+++ b/main.ipynb
@@ -224,6 +224,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'id': 66, 'roomid': '5a62', 'etage': 5, 'date': '26/12/2022-21:20:36'}, {'id': 67, 'roomid': '5a07', 'etage': 5, 'date': '26/12/2022-22:52:20'}, {'id': 68, 'roomid': '5b31', 'etage': 5, 'date': '26/12/2022-22:52:59'}, {'id': 69, 'roomid': '5b83', 'etage': 5, 'date': '26/12/2022-22:53:06'}, {'id': 70, 'roomid': '8a81a', 'etage': 8, 'date': '27/12/2022-10:35:46'}, {'id': 71, 'roomid': '6a15', 'etage': 6, 'date': '27/12/2022-22:23:10'}, {'id': 72, 'roomid': '6b07', 'etage': 6, 'date': '27/12/2022-22:23:58'}, {'id': 73, 'roomid': '6b57a', 'etage': 6, 'date': '27/12/2022-22:24:02'}, {'id': 74, 'roomid': '9a07', 'etage': 9, 'date': '2/1/2023-11:27:11'}]\n",
+      "   id roomid  etage                 date\n",
+      "0  66   5a62      5  26/12/2022-21:20:36\n",
+      "1  67   5a07      5  26/12/2022-22:52:20\n",
+      "2  68   5b31      5  26/12/2022-22:52:59\n",
+      "3  69   5b83      5  26/12/2022-22:53:06\n",
+      "4  70  8a81a      8  27/12/2022-10:35:46\n",
+      "5  71   6a15      6  27/12/2022-22:23:10\n",
+      "6  72   6b07      6  27/12/2022-22:23:58\n",
+      "7  73  6b57a      6  27/12/2022-22:24:02\n",
+      "8  74   9a07      9    2/1/2023-11:27:11\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "import parser\n",
+    "\n",
+    "rep = requests.get('https://hpereira.pythonanywhere.com/bookings/')\n",
+    "\n",
+    "data = json.loads(rep.text)\n",
+    "\n",
+    "print(data)\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": false
